@@ -2,9 +2,34 @@ require 'socket'
 
 module Redcar
   DRB_PORT = 10021
+  DONT_READ_STDIN_ARG = "--ignore-stdin"
+  
+  def self.read_stdin
+    if not $stdin.tty? and not ARGV.include?(DONT_READ_STDIN_ARG)
+      data = ""
+      begin
+        chunk = $stdin.read_nonblock(1024)
+        data << chunk
+        while chunk
+          chunk = $stdin.read_nonblock(1024)
+          data << chunk
+        end
+      rescue Errno::EAGAIN
+        retry
+      rescue EOFError
+      end
+      
+      if data.size > 0
+        require 'tmpdir'
+        file = File.join(Dir.tmpdir, "tmp#{$$}.txt")
+        File.open(file, 'w') {|f| f.write data}
+        ARGV.unshift "--untitled-file=#{file}", DONT_READ_STDIN_ARG
+      end
+    end
+  end
   
   def self.try_to_load_via_drb
-    return if ARGV.find{|arg| arg == "--multiple-instance" || arg == '--help' || arg == '-h'}
+    return if ARGV.find {|arg| arg == "--multiple-instance" || arg == '--help' || arg == '-h'}
     begin
       begin
         TCPSocket.new('127.0.0.1', DRB_PORT).close
@@ -19,10 +44,19 @@ module Redcar
       
       if ARGV.any?
         ARGV.each do |arg|
-          next if arg[0..0] == "-"
-          if drb.open_item_drb(File.expand_path(arg)) != 'ok'
-            return
-          end        
+          if File.file?(arg) or File.directory?(arg)
+            if drb.open_item_drb(File.expand_path(arg)) != 'ok'
+              return
+            end
+          end
+          if arg =~ /--untitled-file=(.*)/
+            path = $1
+            if File.file?(path)
+              if drb.open_item_untitled(File.expand_path(path)) != 'ok'
+                return
+              end
+            end
+          end
         end
       else
        return unless drb.open_item_drb('just_bring_to_front')
